# personal-knowledge-agent-generic-agent-base

./: .gitignore  APP_PORTS.md  CHANGELOG.md  README.md  README_EN.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: DesktopUpdateNotifier.test.tsx  DesktopUpdateNotifier.tsx  desktop-update.css  desktopWorkspaceAdapter.test.ts  desktopWorkspaceAdapter.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/: _headers
apps/web/src/: KnowledgeAgentWebApp.tsx  browserTypes.ts  demoVault.ts  githubVaultSource.test.ts  githubVaultSource.ts  main.tsx  styles.css  vaultSources.test.ts  vaultSources.ts
docs/: AGENT_INSTALL_AND_PRIVACY.md  CONVERSATION_RECORD.md  CONVERSATION_RECORD_POLICY.md  KNOWLEDGE_CANVAS_V0.1.md  PUBLIC_RELEASE.md  RELEASING.md  TAG_CLOUD_KNOWLEDGE_DOMAINS_V0.1.md  USAGE_GUIDE.md  USAGE_GUIDE_EN.md
scripts/: check-no-bundled-notes.mjs  check-version-sync.mjs  deploy-cloudflare-pages.ps1  normalize-release-manifest.mjs  normalize-release-manifest.test.mjs  publish-windows-release.ps1
