[package]
name = "knowledge-agent-desktop"
version = "0.1.1"
description = "Personal knowledge base Agent desktop shell"
edition = "2021"

[lib]
name = "knowledge_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri = { version = "2", features = [] }
zip = "2"
